--- a/templates/nginx/vhost.erb
+++ b/templates/nginx/vhost.erb
@@ -30,9 +30,10 @@ server {
 
   <% if @https then -%>
   ssl on;
-  ssl_session_timeout 5m;
-  ssl_protocols SSLv3 TLSv1;
-  ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
+  ssl_session_timeout 10m;
+  ssl_session_cache shared:SSL:10m;
+  ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
   ssl_prefer_server_ciphers on;
   ssl_certificate /etc/nginx/ssl/<%= @name %>.pem;
   ssl_certificate_key /etc/nginx/ssl/<%= @name %>.key;
