--- a/templates/nginx/vhost_proxy.erb
+++ b/templates/nginx/vhost_proxy.erb
@@ -51,12 +51,13 @@ server {
     <%- end -%>
     proxy_pass http<%= @to_https ? 's' : '' %>://<%= @to_domainval %>:<%= @to_portval %>/;
     proxy_redirect          off;
-    # proxy_set_header        Host            $host;
+    proxy_set_header        Host            $http_host;
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_connect_timeout   90;
-    proxy_send_timeout      90;
-    proxy_read_timeout      90;
+    proxy_set_header        X-Forwarded-Proto $scheme;
+    proxy_connect_timeout   300;
+    proxy_send_timeout      300;
+    proxy_read_timeout      300;
     proxy_buffers           32 4k;
     client_body_buffer_size 128k;
   }
